--- a/src/App.css
+++ b/src/App.css
@@ -363,3 +363,13 @@ box-shadow: 0 8px 20px rgba(228, 7, 7, 0.609);
 .course-card:hover {
   transform: translateY(-6px);
 }
+
+/* contact form code  */
+
+input:focus,
+textarea:focus {
+  outline: none;
+  border-color: #dc3545;
+  box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
+  transition: all 0.3s ease-in-out;
+}
